fixed directory spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -188,6 +188,12 @@ section {
 
 footer .signup {
 	margin-left: 0px;
+	justify-content: flex-start;
+}
+
+//for directory
+footer .row {
+	justify-content: flex-start;
 }
 
 footer {
